--- a/Nsiclass.Client/Areas/Admin/Views/Version/VersionDetails.cshtml
+++ b/Nsiclass.Client/Areas/Admin/Views/Version/VersionDetails.cshtml
@@ -221,14 +221,19 @@
         });
     }
     function DeleteFile(fileName) {
-        var result = confirm("Потвърдете изтриването!");
-        if (result) {
-            $.getJSON('\DeleteFile\?classCode=' + $("#classCodeName").val() + '&versionCode=' + $("#versionCodeName").val() + '&fileName=' + fileName, { get_param: 'value' }, function (data) {
-                if (true) {
+        bootbox.confirm("Потвърдете изтриването на " + fileName, function () {
 
+            $.getJSON('\DeleteFile\?classCode=' + $("#classCodeName").val() + '&versionCode=' + $("#versionCodeName").val() + '&fileName=' + fileName, { get_param: 'value' }, function (data) {
+                if (data) {
+
+                    bootbox.alert('Файлът ' + fileName + ' беше успешно изтрит');
+                }
+                else {
+                    bootbox.alert('Възникна проблем при изтриването на ' + fileName);
                 }
             })
-        };
+            FileList();
+        });
     }
 
 
@@ -239,12 +244,12 @@
         var fullName = fileExt.substring(fileExt.lastIndexOf('\\') + 1);
         fileExt = fileExt.substring(fileExt.lastIndexOf('.'));
         if (validExts.indexOf(fileExt) < 0) {
-            notify.showError("Избран е невалиден тип файл, валидните типове са " +
-                validExts.toString() + " .");
+             bootbox.alert("Избран е невалиден тип файл, валидните типове са " +
+                validExts.toString() + " .")
             return false;
         }
         else if (sizeMb.toPrecision(5) > 10.5) {
-            notify.showError("Размера " + sizeMb.toPrecision(5).toString() + "MB на файла е по-голям от допустимия(10MB)");
+            bootbox.alert("Размера " + sizeMb.toPrecision(5).toString() + "MB на файла е по-голям от допустимия(10MB)");
             return false;
         }
         else {
@@ -257,7 +262,7 @@
 
         let file = $("#myfile")[0].files[0];
         if (file === null) {
-            alert("Не сте избрали файл")
+            bootbox.alert("Не сте избрали файл")
         }
         else {
         // Create FormData object
@@ -281,7 +286,7 @@
                 if (result != "") {
                     $('#FileBrowse').find("*").prop("disabled", true);
                     LoadProgressBar(result); //calling LoadProgressBar function to load the progress bar.
-
+                    $("#fileName").text("");
                 }
             },
             error: function (err) {
@@ -316,7 +321,7 @@
             var val = progressbar.progressbar("value") || 0;
             progressbar.progressbar("value", val + 1);
             if (val < 99) {
-                setTimeout(progress, 25);
+                setTimeout(progress, 15);
             }
         }
         setTimeout(progress, 100);
