--- a/Nsiclass.Client/Views/Shared/_Layout.cshtml
+++ b/Nsiclass.Client/Views/Shared/_Layout.cshtml
@@ -121,6 +121,7 @@
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/js/bootbox.min.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     </environment>
@@ -138,6 +139,7 @@
                 crossorigin="anonymous"
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
+        <script src="~/js/bootbox.min.js"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
     <script>
