--- a/Nsiclass.Client/Views/Shared/_Layout.cshtml
+++ b/Nsiclass.Client/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                 </button>
 
                 <a style="padding-top: 5px;" asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand"><img src="~/png/logo.png" alt="Classification logo" height="32" width="52"></a>
-                @*<a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Начало</a>*@
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Класификации</a>
                 <a asp-area="" asp-controller="ClassClient" asp-action="Relations" class="navbar-brand">Кореспондиращи таблици</a>
                 <a asp-area="" asp-controller="ClassClient" asp-action="LinksList" class="navbar-brand">Полезни връзки</a>
 
