--- a/Nsiclass.Client/wwwroot/css/site.css
+++ b/Nsiclass.Client/wwwroot/css/site.css
@@ -1,6 +1,6 @@
 ﻿
 .content {
-    background: url('../jpg/youtube-cover.jpg');
+    background: url('../jpg/back2.jpg');
     /*background-color:#dbeed2;*/
     background-repeat: no-repeat;
     background-position: center center;
