--- a/Nsiclass.Client/Areas/Admin/Views/Version/VersionDetails.cshtml
+++ b/Nsiclass.Client/Areas/Admin/Views/Version/VersionDetails.cshtml
@@ -34,6 +34,26 @@
                         </p>
                     </td>
                 </tr>
+                @if (User.IsInRole(DataConstants.DeveloperRole))
+                {
+                    <tr>
+                        <td class="meaning-version">
+                            <p>
+                                <strong>Статус</strong>
+                            </p>
+                        </td>
+                        <td>
+                            @if (Model.isDeleted)
+                            {
+                                <p style="color:red;">Изтрита <a class="button btnrestore-small" style="text-decoration: none;" data-toggle="modal" data-target="#@Model.Version">Възстановяване &#33;&#33;&#33;</a></p>
+                            }
+                            else
+                            {
+                                <p style="color:green;">Действаща <a class="button btndelete-small" style="text-decoration: none;" data-toggle="modal" data-target="#@Model.Version">Изтриване &#33;&#33;&#33;</a></p>
+                            }
+                        </td>
+                    </tr>
+                }
                 <tr>
                     <td class="meaning-version">
                         <p>
@@ -41,13 +61,13 @@
                         </p>
                     </td>
                     <td>
-                        @if (Model.isDeleted)
+                        @if (!Model.isActive)
                         {
-                            <p style="color:red;">Недействаща <a class="button btnrestore-small" style="text-decoration: none;" data-toggle="modal" data-target="#@Model.Version">Активиране &#33;&#33;&#33;</a></p>
+                            <p style="color:red;">Недействаща <a class="button btnrestore-small" style="text-decoration: none;" data-toggle="modal" data-target="#@(Model.Version + "status")">Активиране &#33;&#33;&#33;</a></p>
                         }
                         else
                         {
-                            <p style="color:green;">Действаща <a class="button btndelete-small" style="text-decoration: none;" data-toggle="modal" data-target="#@Model.Version">Деактивиране &#33;&#33;&#33;</a></p>
+                            <p style="color:green;">Действаща <a class="button btndelete-small" style="text-decoration: none;" data-toggle="modal" data-target="#@(Model.Version + "status")">Деактивиране &#33;&#33;&#33;</a></p>
                         }
                     </td>
                 </tr>
@@ -175,12 +195,12 @@
                                         </table>
                                     </div>
                                     <div class="col-sm-6">
-                                        
-                                            <div id="progressbar-5">
-                                                <div class="progress-label">
-                                                </div>
+
+                                        <div id="progressbar-5">
+                                            <div class="progress-label">
                                             </div>
-                                        
+                                        </div>
+
                                     </div>
                                     <br />
 
@@ -188,9 +208,9 @@
                                 <br />
                                 <br />
                                 @*<input type="button" id="TreeBtn" class="btn btn-danger" value="Get Data" />
-            <div class="container-fluid">
-                <div id="tree"></div>
-            </div>*@
+                                    <div class="container-fluid">
+                                        <div id="tree"></div>
+                                    </div>*@
                             </div>
                         </div>
                     </td>
@@ -233,7 +253,7 @@
                     bootbox.alert('Възникна проблем при изтриването на ' + fileName);
                 }
             })
-            
+
         };
     }
 
@@ -272,7 +292,7 @@
         data.append('classCode', $("#classCodeName").val());
         data.append('versionCode', $("#versionCodeName").val());
         let _url = '@Url.Action("UploadFiles", "Version")';
-        
+
         $.ajax({
             url: _url,
             type: 'POST',
@@ -330,6 +350,46 @@
 
 </script>
 
+@if (Model.isActive == true)
+{
+    <form method="post" asp-controller="Version" asp-action="DeactivateVersion" asp-route-classCode="@Model.Classif" asp-route-versionCode="@Model.Version">
+
+        <div class="modal fade" id="@(Model.Version + "status")" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div style="background-color:papayawhip;" class="modal-content">
+                    <div class="modal-body">
+                        <h4>Сигурни ли сте, че искате да деактивирате версия <span style="font-weight:700">@Model.Version</span></h4>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Отказ</button>
+                        <button type="submit" class="btn btn-danger">Потвърди</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </form>
+}
+else
+{
+    <form method="post" asp-controller="Version" asp-action="ActivateVersion" asp-route-classCode="@Model.Classif" asp-route-versionCode="@Model.Version">
+
+        <div class="modal fade" id="@(Model.Version + "status")" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div style="background-color:papayawhip;" class="modal-content">
+                    <div class="modal-body">
+                        <h4>Сигурни ли сте, че искате да активирате версия <span style="font-weight:700">@Model.Version</span></h4>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Отказ</button>
+                        <button type="submit" class="btn btn-danger">Потвърди</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </form>
+}
 @if (Model.isDeleted != true)
 {
     <form method="post" asp-controller="Version" asp-action="DestroyVersion" asp-route-classCode="@Model.Classif" asp-route-versionCode="@Model.Version">
@@ -338,7 +398,7 @@
             <div class="modal-dialog" role="document">
                 <div style="background-color:papayawhip;" class="modal-content">
                     <div class="modal-body">
-                        <h4>Сигурни ли сте, че искате да деактивирате версия <span style="font-weight:700">@Model.Version</span></h4>
+                        <h4>Сигурни ли сте, че искате да изтриете версия <span style="font-weight:700">@Model.Version</span></h4>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Отказ</button>
@@ -358,7 +418,7 @@ else
             <div class="modal-dialog" role="document">
                 <div style="background-color:papayawhip;" class="modal-content">
                     <div class="modal-body">
-                        <h4>Сигурни ли сте, че искате да активирате версия <span style="font-weight:700">@Model.Version</span></h4>
+                        <h4>Сигурни ли сте, че искате да възстановите версия <span style="font-weight:700">@Model.Version</span></h4>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Отказ</button>
@@ -371,7 +431,8 @@ else
     </form>
 }
 
-    <script src="~/js/versionDetails.js"></script>
+
+<script src="~/js/versionDetails.js"></script>
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
 }
