--- a/Nsiclass.Client/Areas/Admin/Views/Version/VersionDetails.cshtml
+++ b/Nsiclass.Client/Areas/Admin/Views/Version/VersionDetails.cshtml
@@ -31,6 +31,7 @@
                         <p>
                             <input id="versionCodeName" asp-for="Version" type="hidden" />
                             <strong>@Model.Version</strong>
+                            <a class="button redaction" style="text-decoration: none; margin-left:60px;" data-toggle="modal" data-target="#@(Model.Version + "copy")">Създаване на копие</a>
                         </p>
                     </td>
                 </tr>
@@ -45,11 +46,11 @@
                         <td>
                             @if (Model.isDeleted)
                             {
-                                <p style="color:red;">Изтрита <a class="button btnrestore-small" style="text-decoration: none;" data-toggle="modal" data-target="#@Model.Version">Възстановяване &#33;&#33;&#33;</a></p>
+                                <p style="color:red;">Изтрита &nbsp;&nbsp;&nbsp;&nbsp;<a class="button btnrestore-small" style="text-decoration: none;" data-toggle="modal" data-target="#@Model.Version">Възстановяване &#33;&#33;&#33;</a></p>
                             }
                             else
                             {
-                                <p style="color:green;">Налична <a class="button btndelete-small" style="text-decoration: none;" data-toggle="modal" data-target="#@Model.Version">Изтриване &#33;&#33;&#33;</a></p>
+                                <p style="color:green;">Налична &nbsp;&nbsp;&nbsp;&nbsp;<a class="button btndelete-small" style="text-decoration: none;" data-toggle="modal" data-target="#@Model.Version">Изтриване &#33;&#33;&#33;</a></p>
                             }
                         </td>
                     </tr>
@@ -349,6 +350,25 @@
     }
 
 </script>
+
+<form method="post" asp-controller="Version" asp-action="CreateCopyVersion" asp-route-classCode="@Model.Classif" asp-route-versionCode="@Model.Version">
+
+    <div class="modal fade" id="@(Model.Version + "copy")" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div style="background-color:papayawhip;" class="modal-content">
+                <div class="modal-body">
+                    <h4>Въведете уникален код за новата версия, копие на <span style="font-weight:700">@Model.Version</span></h4>
+                    <input type="text" name="newVersion"/>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Отказ</button>
+                    <button type="submit" class="btn btn-danger">Потвърди</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</form>
 
 @if (Model.isActive == true)
 {
