--- a/Nsiclass.Client/Areas/Admin/Views/Version/VersionDetails.cshtml
+++ b/Nsiclass.Client/Areas/Admin/Views/Version/VersionDetails.cshtml
@@ -31,7 +31,10 @@
                         <p>
                             <input id="versionCodeName" asp-for="Version" type="hidden" />
                             <strong>@Model.Version</strong>
-                            <a class="button redaction" style="text-decoration: none; margin-left:60px;" data-toggle="modal" data-target="#@(Model.Version + "copy")">Създаване на копие</a>
+                            @if (!Model.isDeleted && Model.isActive)
+                            {
+                                <a class="button redaction" style="text-decoration: none; margin-left:60px;" data-toggle="modal" data-target="#@(Model.Version + "copy")">Създаване на копие</a>
+                            }
                         </p>
                     </td>
                 </tr>
@@ -358,7 +361,7 @@
             <div style="background-color:papayawhip;" class="modal-content">
                 <div class="modal-body">
                     <h4>Въведете уникален код за новата версия, копие на <span style="font-weight:700">@Model.Version</span></h4>
-                    <input type="text" name="newVersion"/>
+                    <input type="text" name="newVersion" />
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Отказ</button>
