--- a/Nsiclass.Client/Areas/Admin/Views/Version/VersionDetails.cshtml
+++ b/Nsiclass.Client/Areas/Admin/Views/Version/VersionDetails.cshtml
@@ -169,6 +169,20 @@
                 <tr>
                     <td class="meaning-version">
                         <p>
+                            <strong>Административни задачи:&nbsp;</strong>
+                        </p>
+                    </td>
+                    <td>
+                        @if (!Model.isDeleted && Model.isActive)
+                        {
+                            <a class="button redaction" style="text-decoration: none;" data-toggle="modal" data-target="#@(Model.Version + "element")">Добавяне на нов елемент</a>
+                        }
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="meaning-version">
+                        <p>
                             <strong>Ресурси</strong>
                         </p>
                     </td>
@@ -211,10 +225,6 @@
                                 </div>
                                 <br />
                                 <br />
-                                @*<input type="button" id="TreeBtn" class="btn btn-danger" value="Get Data" />
-                                    <div class="container-fluid">
-                                        <div id="tree"></div>
-                                    </div>*@
                             </div>
                         </div>
                     </td>
@@ -353,6 +363,39 @@
     }
 
 </script>
+
+<form method="post" asp-controller="Items" asp-action="AddNewElement" asp-route-classCode="@Model.Classif" asp-route-versionCode="@Model.Version">
+
+    <div class="modal fade" id="@(Model.Version + "element")" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div style="background-color:papayawhip;" class="modal-content">
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h5>Въведете уникален код за новия елемент:</h5>
+                            <input type="text" name="newItemId" />
+                        </div>
+                        <div class="col-md-4" style="padding-top:8px;">
+                            <input type="checkbox" name="isItLeaf" value="check" />
+                            <label>Листо ли е?</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h5>Описание:</h5>
+                            <input style="width:80%;" type="text" name="description" />
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Отказ</button>
+                    <button type="submit" class="btn btn-danger">Добави елемент</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</form>
 
 <form method="post" asp-controller="Version" asp-action="CreateCopyVersion" asp-route-classCode="@Model.Classif" asp-route-versionCode="@Model.Version">
 
